# origin

Racing_Simulator/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  RS.vcxproj  RS.vcxproj.filters  Racing_Simulator.sln  Source.cpp  Vehicles_Lib.vcxproj  Vehicles_Lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Racing_Simulator/Vehicles_Lib/: air_vehicle.cpp  air_vehicle.h  ground_vehicle.cpp  ground_vehicle.h  vehicle.cpp  vehicle.h
Racing_Simulator/Vehicles_Lib.dir/Debug/: objects.txt
Racing_Simulator/Vehicles_Lib.dir/MinSizeRel/: objects.txt
Racing_Simulator/Vehicles_Lib.dir/RelWithDebInfo/: objects.txt
Racing_Simulator/Vehicles_Lib.dir/Release/: objects.txt
Racing_Simulator/Vehicles_Lib/air_vehicle/: broom.cpp  broom.h  eagle.cpp  eagle.h  magic_carpet.cpp  magic_carpet.h
Racing_Simulator/Vehicles_Lib/ground_vehicle/: all_terrain_boots.cpp  all_terrain_boots.h  camel.cpp  camel.h  centaur.cpp  centaur.h  speed_camel.cpp  speed_camel.h
homework01/: homework01.cpp  homework01.sln  homework01.vcxproj
homework0201/: homework02.cpp  homework02.sln  homework02.vcxproj
homework0202/: homework0202.cpp  homework0202.sln  homework0202.vcxproj
homework0203/: homework0203.cpp  womework0203.sln  womework0203.vcxproj
homework0301/: homework0301.cpp  homework0301.sln  homework0301.vcxproj
homework0302/: homework0302.cpp  homework0302.sln  homework0302.vcxproj
homework0401/: homework0401.cpp  homework0401.sln  homework0401.vcxproj
homework0402/: homework0402.cpp  homework0402.sln  homework0402.vcxproj
homework0501/: homework0501.cpp  homework0501.sln  homework0501.vcxproj
homework0502/: homework0502.cpp  homework0502.sln  (+1 more)
homework1104/: CMakeLists.txt  Quadrangle.h  Source.cpp  Triangle.cpp  Triangle.h
(+175 files in other folders)
